# grades_native_fibonacci

./: LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/grades_native_fibonacci_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: grades_native_fibonacci.podspec
ios/Classes/: grades_native_fibonacci.c
lib/: grades_native_fibonacci.dart  grades_native_fibonacci_bindings_generated.dart
linux/: CMakeLists.txt
macos/: grades_native_fibonacci.podspec
src/: CMakeLists.txt  grades_native_fibonacci.c  grades_native_fibonacci.h
windows/: CMakeLists.txt
